Provide a new build variable to tell whether to build RV64 or not
This is done by looking at the size of a pointer on the host system.
This tells us whether the system is 32 or 64 bit. We then expose
a variable to act accordingly.

--- a/configure.ac
+++ b/configure.ac
@@ -63,6 +63,15 @@ AC_C_BIGENDIAN
 AC_C_CONST
 AC_TYPE_SIZE_T
 
+dnl Check pointer size to determine if we can build RV64 support
+AC_CHECK_SIZEOF([void *])
+if test "$ac_cv_sizeof_void_p" -eq 8; then
+	BUILD_RV64=yes
+else
+	BUILD_RV64=no
+fi
+AC_SUBST(BUILD_RV64)
+
 AC_CHECK_FUNCS([getopt_long],, [AC_MSG_FAILURE(Function getopt_long not defined.)])
 AC_SYS_LARGEFILE
 
