--- a/config.h.in
+++ b/config.h.in
@@ -90,6 +90,9 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* The size of 'void *', as computed by sizeof. */
+#undef SIZEOF_VOID_P
+
 /* Define to 1 if all of the C89 standard headers exist (not just the ones
    required in a freestanding environment). This macro is provided for
    backward compatibility; new code need not use it. */
